--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -23,7 +23,7 @@ jobs:
         run: npm install
         
       - name: Pull Mikes Changes
-        run: git pull origin/mike
+        run: git pull mike
 
       - name: Build project
         run: npm run build
