--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,12 +18,12 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '22'  # Use the version of Node.js that your project requires
+        
+      - name: Pull Mikes Changes
+        run: git pull origin mike
 
       - name: Install dependencies
         run: npm install
-        
-      - name: Pull Mikes Changes
-        run: git pull mike
 
       - name: Build project
         run: npm run build
