--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-  "dependencies": {
-  },
   "devDependencies": {
-    "axios": "^1.7.9",
-    "firebase": "^11.0.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
     "@eslint/js": "^9.15.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
+    "axios": "^1.7.9",
+    "css-loader": "^7.1.2",
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "firebase": "^11.0.2",
     "globals": "^15.12.0",
     "jest": "^29.7.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2",
+    "style-loader": "^4.0.0",
     "vite": "^6.0.3"
   }
 }
