--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -19,8 +19,8 @@ jobs:
         with:
           node-version: '22'  # Use the version of Node.js that your project requires
         
-      - name: List files and directories
-        run: ls
+      - name: Clean Cache
+        run: npm cache clean --force
 
       - name: Install dependencies
         run: npm install
