--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -25,11 +25,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build project
-        run: npm run build
-
-      - name: Start project
-        run: npm run start
+      - name: Run Dev
+        run: npm run dev
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
