--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm install
 
       - name: Run Dev
-        run: npm run dev
+        run: npm run start
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
