--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -25,8 +25,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run Dev
-        run: npm run start
+      - name: Linting
+        run: npm run lint
+
+      - name: Build
+        run: npm run build
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
